# whisper-voice-transcription

./: .env  .gitignore  LICENSE  README.md  check_ffmpeg.py  main.py  pyproject.toml  transcription_core.py
.github/: copilot-instructions.md
